Fixed Custom Button Close

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -8,6 +8,7 @@
     <meta name="description" content="io.Connect Workspaces Frame" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="@interopio/workspaces-ui-react/dist/styles/workspaces.css">
     <title>io.Connect Workspaces</title>
   </head>
   <body>
